// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`appendSDF > stats should be in incremental 1`] = `
{
  "calculated": [
    {
      "always": true,
      "counter": 10,
      "isNumeric": true,
      "kind": "number",
      "label": "mw",
      "maxValue": 402.48519999999996,
      "minValue": 30.02588,
    },
    {
      "always": true,
      "counter": 10,
      "isNumeric": true,
      "kind": "number",
      "label": "em",
      "maxValue": 402.20424,
      "minValue": 30.010565,
    },
    {
      "always": true,
      "counter": 10,
      "isNumeric": false,
      "kind": "string",
      "label": "mf",
    },
    {
      "always": true,
      "counter": 10,
      "isNumeric": true,
      "kind": "number",
      "label": "acceptorCount",
      "maxValue": 6,
      "minValue": 1,
    },
    {
      "always": true,
      "counter": 10,
      "isNumeric": true,
      "kind": "number",
      "label": "donorCount",
      "maxValue": 3,
      "minValue": 0,
    },
    {
      "always": true,
      "counter": 10,
      "isNumeric": true,
      "kind": "number",
      "label": "logP",
      "maxValue": 7.642299979925156,
      "minValue": -1.71840001642704,
    },
    {
      "always": true,
      "counter": 10,
      "isNumeric": true,
      "kind": "number",
      "label": "logS",
      "maxValue": 0.022000011056661606,
      "minValue": -5.927000029012561,
    },
    {
      "always": true,
      "counter": 10,
      "isNumeric": true,
      "kind": "number",
      "label": "polarSurfaceArea",
      "maxValue": 97.73999786376953,
      "minValue": 17.06999969482422,
    },
    {
      "always": true,
      "counter": 10,
      "isNumeric": true,
      "kind": "number",
      "label": "rotatableBondCount",
      "maxValue": 5,
      "minValue": 0,
    },
    {
      "always": true,
      "counter": 10,
      "isNumeric": true,
      "kind": "number",
      "label": "stereoCenterCount",
      "maxValue": 8,
      "minValue": 0,
    },
  ],
  "data": [
    {
      "always": true,
      "counter": 20,
      "isNumber": false,
      "kind": "string",
      "label": "molfile",
    },
    {
      "always": true,
      "counter": 20,
      "isNumber": false,
      "kind": "string",
      "label": "ID",
    },
    {
      "always": true,
      "counter": 20,
      "isNumber": false,
      "kind": "string",
      "label": "rn",
    },
    {
      "always": false,
      "counter": 19,
      "isNumber": false,
      "kind": "string",
      "label": "mf",
    },
    {
      "always": false,
      "counter": 19,
      "isNumber": false,
      "isNumeric": true,
      "kind": "number",
      "label": "mw",
      "maxValue": 402.49,
      "minValue": 30.03,
    },
    {
      "always": false,
      "counter": 9,
      "isNumber": false,
      "kind": "string",
      "label": "bp",
    },
    {
      "always": false,
      "counter": 19,
      "isNumber": false,
      "kind": "string",
      "label": "mp",
    },
  ],
}
`;

exports[`appendSDF > stats should be in incremental 2`] = `
{
  "calculated": [
    {
      "always": true,
      "counter": 18,
      "isNumeric": true,
      "kind": "number",
      "label": "mw",
      "maxValue": 402.48519999999996,
      "minValue": 30.02588,
    },
    {
      "always": true,
      "counter": 18,
      "isNumeric": true,
      "kind": "number",
      "label": "em",
      "maxValue": 402.20424,
      "minValue": 30.010565,
    },
    {
      "always": true,
      "counter": 18,
      "isNumeric": false,
      "kind": "string",
      "label": "mf",
    },
    {
      "always": true,
      "counter": 18,
      "isNumeric": true,
      "kind": "number",
      "label": "acceptorCount",
      "maxValue": 9,
      "minValue": 1,
    },
    {
      "always": true,
      "counter": 18,
      "isNumeric": true,
      "kind": "number",
      "label": "donorCount",
      "maxValue": 4,
      "minValue": 0,
    },
    {
      "always": true,
      "counter": 18,
      "isNumeric": true,
      "kind": "number",
      "label": "logP",
      "maxValue": 7.642299979925156,
      "minValue": -1.71840001642704,
    },
    {
      "always": true,
      "counter": 18,
      "isNumeric": true,
      "kind": "number",
      "label": "logS",
      "maxValue": 0.022000011056661606,
      "minValue": -5.927000029012561,
    },
    {
      "always": true,
      "counter": 18,
      "isNumeric": true,
      "kind": "number",
      "label": "polarSurfaceArea",
      "maxValue": 139.53999948501587,
      "minValue": 17.06999969482422,
    },
    {
      "always": true,
      "counter": 18,
      "isNumeric": true,
      "kind": "number",
      "label": "rotatableBondCount",
      "maxValue": 9,
      "minValue": 0,
    },
    {
      "always": true,
      "counter": 18,
      "isNumeric": true,
      "kind": "number",
      "label": "stereoCenterCount",
      "maxValue": 8,
      "minValue": 0,
    },
  ],
  "data": [
    {
      "always": true,
      "counter": 28,
      "isNumber": false,
      "kind": "string",
      "label": "molfile",
    },
    {
      "always": false,
      "counter": 20,
      "isNumber": false,
      "kind": "string",
      "label": "ID",
    },
    {
      "always": false,
      "counter": 20,
      "isNumber": false,
      "kind": "string",
      "label": "rn",
    },
    {
      "always": false,
      "counter": 19,
      "isNumber": false,
      "kind": "string",
      "label": "mf",
    },
    {
      "always": false,
      "counter": 19,
      "isNumber": false,
      "isNumeric": true,
      "kind": "number",
      "label": "mw",
      "maxValue": 402.49,
      "minValue": 30.03,
    },
    {
      "always": false,
      "counter": 9,
      "isNumber": false,
      "kind": "string",
      "label": "bp",
    },
    {
      "always": false,
      "counter": 19,
      "isNumber": false,
      "kind": "string",
      "label": "mp",
    },
    {
      "always": false,
      "counter": 8,
      "isNumber": false,
      "kind": "string",
      "label": "Catalogue Number",
    },
    {
      "always": false,
      "counter": 8,
      "isNumber": false,
      "kind": "string",
      "label": "Chemical Name",
    },
    {
      "always": false,
      "counter": 8,
      "isNumber": false,
      "kind": "string",
      "label": "CAS Number",
    },
    {
      "always": false,
      "counter": 8,
      "isNumber": false,
      "kind": "string",
      "label": "Molecular Formula",
    },
    {
      "always": false,
      "counter": 8,
      "isNumber": false,
      "isNumeric": true,
      "kind": "number",
      "label": "Molecular Weight",
      "maxValue": 321.33,
      "minValue": 222.72,
    },
    {
      "always": false,
      "counter": 8,
      "isNumber": false,
      "kind": "string",
      "label": "Quantity1",
    },
    {
      "always": false,
      "counter": 8,
      "isNumber": false,
      "kind": "string",
      "label": "Price1",
    },
    {
      "always": false,
      "counter": 8,
      "isNumber": false,
      "kind": "string",
      "label": "Quantity2",
    },
    {
      "always": false,
      "counter": 8,
      "isNumber": false,
      "kind": "string",
      "label": "Price2",
    },
    {
      "always": false,
      "counter": 8,
      "isNumber": false,
      "kind": "string",
      "label": "Category",
    },
    {
      "always": false,
      "counter": 2,
      "isNumber": false,
      "kind": "string",
      "label": "Quantity3",
    },
    {
      "always": false,
      "counter": 2,
      "isNumber": false,
      "kind": "string",
      "label": "Price3",
    },
    {
      "always": false,
      "counter": 2,
      "isNumber": false,
      "kind": "string",
      "label": "Quantity4",
    },
    {
      "always": false,
      "counter": 2,
      "isNumber": false,
      "kind": "string",
      "label": "Price4",
    },
  ],
}
`;
